testing/tests/ui/cycle.rs
use askama::Template;

#[derive(Template)]
#[template(path = "cycle2.html")]
struct Cycle;

fn main() {
}
